--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
                     <li><a href="#">MANAGE CATEGORIES</a></li>
                     <li><a href="#">LOG OUT</a></li>
                     <li><a href="#">LOG IN</a></li>
-                    <li><a href="#">REGISTER</a></li>
+                    <li><a href="{{ url_for('register') }}">REGISTER</a></li>
                 </ul>
             </div>
         </nav>
@@ -42,7 +42,7 @@
             <li><a href="#">MANAGE CATEGORIES</a></li>
             <li><a href="#">LOG OUT</a></li>
             <li><a href="#">LOG IN</a></li>
-            <li><a href="#">REGISTER</a></li>
+            <li><a href="{{ url_for('register') }}">REGISTER</a></li>
         </ul>
     </header>
 
