Add Logout functionality

--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
                 <!-- login -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
-                        Log In <i class="material-icons person prefix light-blue-text text-darken-4"></i>
+                        Log In <i class="material-icons input light-blue-text text-lighten-4">input</i>
                     </button>
                 </div>
             </div>
