--- a/templates/base.html
+++ b/templates/base.html
@@ -23,12 +23,15 @@
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_tasks') }}">HOME</a></li>
-                    <li><a href="{{ url_for('profile', username=session['user']) }}">PROFILE</a></li>
-                    <li><a href="#">NEW TASK</a></li>
-                    <li><a href="#">MANAGE CATEGORIES</a></li>
-                    <li><a href="#">LOG OUT</a></li>
-                    <li><a href="{{ url_for('login') }}">LOG IN</a></li>
-                    <li><a href="{{ url_for('register') }}">REGISTER</a></li>
+                    {% if session.user %}
+                        <li><a href="{{ url_for('profile', username=session['user']) }}">PROFILE</a></li>
+                        <li><a href="#">NEW TASK</a></li>
+                        <li><a href="#">MANAGE CATEGORIES</a></li>
+                        <li><a href="{{ url_for('logout') }}">LOG OUT</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('login') }}">LOG IN</a></li>
+                        <li><a href="{{ url_for('register') }}">REGISTER</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
@@ -37,12 +40,15 @@
         <ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align light-blue-text text-darken-4">TASK MANAGER</h4></li>
             <li><a href="{{ url_for('get_tasks') }}">HOME</a></li>
-            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-            <li><a href="#">NEW TASK</a></li>
-            <li><a href="#">MANAGE CATEGORIES</a></li>
-            <li><a href="#">LOG OUT</a></li>
-            <li><a href="{{ url_for('register') }}">LOG IN</a></li>
-            <li><a href="{{ url_for('register') }}">REGISTER</a></li>
+            {% if session.user %}
+                <li><a href="{{ url_for('profile', username=session['user']) }}">PROFILE</a></li>
+                <li><a href="#">NEW TASK</a></li>
+                <li><a href="#">MANAGE CATEGORIES</a></li>
+                <li><a href="{{ url_for('logout') }}">LOG OUT</a></li>
+            {% else %}
+                <li><a href="{{ url_for('login') }}">LOG IN</a></li>
+                <li><a href="{{ url_for('register') }}">REGISTER</a></li>
+            {% endif %}
         </ul>
     </header>
 
