--- a/templates/register.html
+++ b/templates/register.html
@@ -27,7 +27,7 @@
                 <!-- register -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large light-blue darken-4 text-shadow">
-                        Register <i class="material-icons person prefix light-blue-text text-darken-4"></i>
+                        Register <i class="material-icons how_to_reg light-blue-text text-lighten-4">how_to_reg</i>
                     </button>
                 </div>
             </div>
