--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,33 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
 
-    {% for task in tasks %}
-        {{ task.task_name }}<br>
-        {{ task.category_name }}<br>
-        {{ task.task_description }}<br>
-        {{ task.is_urgent }}<br>
-        {{ task.due_date }}<br>
-    {% endfor %}
-
     <ul class="collapsible">
+        {% for task in tasks %}
         <li>
             <div class="collapsible-header white-text light-blue darken-4 text-shadow">
-                <i class="material-icons">expand_more</i>First
+                <i class="material-icons">expand_more</i>
+                <strong>{{ task.task_name }}</strong> : {{ task.due_date }}
+                {% if task.is_urgent == "on" %}
+                    <i class="material-icons tooltipped" data-position="right"
+                        data-tooltip="URGENT">notification_important
+                    </i>
+                {% endif %}
             </div>
-            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-        </li>
-        <li>
-            <div class="collapsible-header white-text light-blue darken-4 text-shadow">
-                <i class="material-icons">expand_more</i>Second
+            <div class="collapsible-body">
+                <strong>{{ task.category_name }}</strong>
+                <p>{{ task.task_description }}</p>
             </div>
-            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
         </li>
-        <li>
-            <div class="collapsible-header white-text light-blue darken-4 text-shadow">
-                <i class="material-icons">expand_more</i>Third
-            </div>
-            <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-        </li>
+        {% endfor %}
     </ul>
 
 
