--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <!-- top navbar -->
         <nav class="nav-extended text-shadow blue darken-1">
             <div class="nav-wrapper">
-                <a href="{{ url_for('get_tasks') }}" class="brand-logo">TASK MANAGER</a>
+                <a href="{{ url_for('get_tasks') }}" class="brand-logo margin-left">TASK MANAGER</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('get_tasks') }}">HOME</a></li>
