--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -10,9 +10,13 @@
                 <div class="input-field col s12">
                     <i class="material-icons prefix light-blue-text text-darken-4">folder_open</i>
                     <select id="category_name" name="category_name" class="validate" required>
-                        <option value="" disabled selected>Choose Category</option>
+                        <option value="" disabled>Choose Category</option>
                         {% for category in categories %}
-                            <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                            {% if category.category_name == task.category_name %}
+                                <option value="{{ category.category_name }}" selected>{{ category.category_name }}</option>
+                            {% else %}
+                                <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+                            {% endif %}
                         {% endfor %}
                     </select>
                     <label for="category_name">Task Category</label>
@@ -23,7 +27,7 @@
                 <div class="input-field col s12">
                     <i class="material-icons prefix light-blue-text text-darken-4">edit</i>
                     <input id="task_name" name="task_name" minlength="5" maxlength="50"
-                        type="text" class="validate" required>
+                        value="{{ task.task_name }}" type="text" class="validate" required>
                     <label for="task_name">Task Name</label>
                 </div>
             </div>
@@ -33,6 +37,7 @@
                     <i class="material-icons prefix light-blue-text text-darken-4">format_align_left</i>
                     <textarea id="task_description" name="task_description" minlength="5"
                         maxlength="200" class="materialize-textarea validate" required>
+                        {{- task.task_description -}}
                     </textarea>
                     <label for="task_description">Task Description</label>
                 </div>
@@ -41,8 +46,8 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix light-blue-text text-darken-4">calendar_month</i>
-                    <input id="due_date" name="due_date"
-                        type="text" class="datepicker validate" required>
+                    <input id="due_date" name="due_date" type="text"
+                        value="{{ task.due_date }}" class="datepicker validate" required>
                     <label for="due_date">Due Date</label>
                 </div>
             </div>
@@ -52,7 +57,11 @@
                     <div class="switch">
                         <i class="material-icons prefix light-blue-text text-darken-4">notification_important</i>
                         <label for="is_urgent">
-                            <input type="checkbox" id="is_urgent" name="is_urgent">
+                            {% if task.is_urgent == "on" %}
+                                <input type="checkbox" id="is_urgent" name="is_urgent" checked>
+                            {% else %}
+                                <input type="checkbox" id="is_urgent" name="is_urgent">
+                            {% endif %}
                             <span class="lever"></span>
                             Is Urgent
                         </label>
@@ -62,6 +71,10 @@
             <!-- submit button -->
             <div class="row">
                 <div class="col s12 center-align">
+                    <!-- cancel button -->
+                    <a href="{{ url_for('get_tasks') }}" class="btn-large red text-shadow">
+                        Cancel <i class="material-icons prefix light-blue-text text-lighten-4">cancel</i>
+                    </a>
                     <button type="submit" class="btn-large light-blue darken-1 text-shadow">
                         Edit Task <i class="material-icons prefix light-blue-text text-lighten-4">edit_note</i>
                     </button>
